<resources>

    <string name="app_name">ONAMET</string>
    <string name="notification_prefs_title">Notificaciones</string>
    <string name="notification_prefs_summary">Habilitar notificaciones instantáneas para los boletines</string>
    <string name="acc_prefs_sync">Configurar cuenta</string>
    <string name="about_prefs_title">Acerca de Onamet</string>
    <string name="about_dev_prefs_title">Acerca del desarrollador</string>
    <string name="contacts_prefs_title">Información de contacto</string>
    <string name="sms_auth_prefs_title">Verificar SMS</string>
    <string name="settings">Configuración</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="pref_help_title">Ayuda</string>
    <string name="pref_help_summary">Preguntas frecuentes sobre la información brindada</string>
    <string name="pref_dev_summary">Información de contacto del desarrollador</string>
    <string name="pref_account_summary">Iniciar sesión para configurar servicio de SMS</string>
    <string name="pref_sms_summary">Verificar SMS para recibir alertas en caso que no tengas acceso a internet</string>
    <string name="pref_other_title">OTRO</string>
    <string name="pref_account_title">CUENTA</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>



    <string name="pref_about_content">La Oficina Nacional de Meteorología <b>(ONAMET)</b> desde su creación como ente regulador de la investigación y producción de la información meteorológica ha experimentado un cambio continuo en lo relativo a su dependencia y calidad.\n\n
De conformidad con el Decreto número 687, de fecha 23, del mes de marzo, del año mil novecientos treinta y tres (1933); mediante el cual se otorgó por primera vez a la entonces oficina meteorológica, la facultad de determinar diariamente la hora de las 12 meridiano. Esta oficina pertenecía en esos momentos a la secretaría de estado de agricultura y comercio bajo cuya dependencia permaneció hasta el año 1956.\n\n
El Decreto número 2298, de fecha siete (7), del mes de diciembre del año mil novecientos cincuenta y seis (1956) establece el "Reglamento Orgánico del Servicio Meteorológico Nacional", elevando dicho organismo de Oficina Meteorológica, a Dirección Nacional y colocándola bajo la dependencia de la Secretaría de Estado de las Fuerzas Armadas. Dicho Decreto señala los organismos que regirán el servicio meteorológico nacional, siendo estos: La Dirección General y las estaciones de diversas ordenes instaladas en el país; asimismo, establece por primera vez cuales son las atribuciones de dicha institución.\n\n
En el año 1958, por medio del Decreto número 388, se creo la Secretaría de Estado de Comunicaciones y Transporte, y mediante el mismo se traspasó a dicha secretaría el Servicio Meteorológico Nacional.\n\n
Mediante el Decreto número 5406, se traspasó el servicio Meteorológico bajo la dependencia de la Secretaría de Estado de Obras Públicas.\n\n
Siguiendo su traslado constante, el Servicio Meteorológico, regresa bajo la dependencia de la Secretaría de Estado de Agricultura, gracias al Decreto número 49, de fecha ocho (8), del mes de Septiembre del año 1965.\n\n
Ya para el año 1966, mediante el Decreto 1142, de fecha 28, del mes de abril; se aprobó el reglamento orgánico del Ministerio de Agricultura, colocando el mismo a meteorología, como un departamento de dicha cartera.\n\n
Luego de varios años de permanencia bajo la dependencia de la Secretaria de Agricultura; la institución meteorológica pasó a ser una dependencia del Secretario Técnico de la Presidencia, con el grado de Oficina Nacional de Meteorología (ONAMET); dicho cambio se produjo por el Decreto número 1838, de fecha 24, del mes de febrero del año 1984.\n\n
El ultimo cambio que ha sufrido esta Oficina fue con el Decreto número 764-03, de fecha 12 del mes de agosto del año 2003, donde la Oficina Nacional de meteorologia pasa a ser una dependencia de la Dirección Nacional de Aeronáutica Civil hasta la fecha.</string>

    <string name="about_onamet_title">Acerca de Onamet</string>
    <string name="pref_notifications_title">NOTIFICACIONES</string>
    <string name="signout">Cerrar sesión</string>
    <string name="pref_account_signout_key">pref_account_signout_key</string>
    <string name="pref_account_key">pref_account_key</string>

    <!-- OnBoarding Experience Text -->
    <string name="slide_1_text">Slide 1</string>
    <string name="slide_2_text">Slide 2</string>
    <string name="slide_3_text">Slide 3</string>
    <string name="slide_4_text">Slide 4</string>
    <!-- DEMO DATA -->

    <!-- OnBoarding -->

    <string name="welcome_onamet">Bienvenido a ONAMET</string>
    <string name="welcome_onamet_description">
        Con nuestra aplicación oficial estarás al tanto de toda la información climática en
        la República Dominicana directamente de la Oficina Nacional de Meteorología
    </string>
    <string name="welcome_daily_forecasts">Pronósticos Diarios</string>
    <string name="welcome_daily_forecasts_description">
        Recibe el estado del clima para los próximos 13 días y no permitas que la lluvia te atrape
        desprevenido a cualquier provincia que vayas
    </string>
    <string name="welcome_bulletins">
        Boletines Oficiales
    </string>
    <string name="welcome_bulletins_description">
        Los boletines oficiales con notificaciones al instante, para que estés al tanto de lo
        último y te puedas preparar ante cualquier evento meteorológico
    </string>
    <string name="welcome_no_internet">
        Aunque no tengas Internet
    </string>
    <string name="welcome_no_internet_description">
        Recibe los boletines de emergencia en mensajes de texto en situaciones donde no haya
        Internet disponible. Inicia sesión con cualquiera de tus cuentas para habilitar esta
        funcionalidad
    </string>

    <string name="_06_00">06:00</string>
    <string name="_08_00">08:00</string>
    <string name="_10_00">10:00</string>
    <string name="_12_00">12:00</string>
    <string name="_02_00">02:00</string>
    <string name="_04_00">04:00</string>

    <string name="sign_in_with_google">Iniciar con Google</string>
    <string name="sign_in_with_facebook">Iniciar con Facebook</string>
    <string name="sign_in_with_twitter">Iniciar con Twitter</string>

    <string name="facebook_application_id" translatable="false">
        134196063715265
    </string>
    <string name="facebook_login_protocol_scheme" translatable="false">
        fb134196063715265
    </string>

    <string name="twitter_consumer_key" translatable="false">
        HjnWrYpNAN7N1qRTWtinowNcE
    </string>
    <string name="twitter_consumer_secret" translatable="false">
        anHK0oImncPzjeMf4W5RBFXNTPNzYuFKCtIxpP57XTQNTaEDR6
    </string>

    <string name="ads_forecast_main_list">
        ca-app-pub-6005843157698202/3043293572
    </string>
    <string name="ads_forecast_details">
        ca-app-pub-6005843157698202/8693189978
    </string>
    <string name="ads_bulletins_main_list">
        ca-app-pub-6005843157698202/2705216379
    </string>
    <string name="ads_test">
        ca-app-pub-3940256099942544/6300978111
    </string>
    <string name="pref_account_sms_key">pref_account_sms_key</string>

    <string name="aeris_client_id">
        EtZ77Kc9co9ZvOEum69hf
    </string>
    <string name="aeris_client_secret">
        aw6sgkgdyyA0bldL8dtW2LRawC9vjyPYhiuKfIWH
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_province">Elige una provincia</string>
    <string name="phone_hint">Ingresa tu número de teléfono</string>
    <string name="invalid_phone_number">Número inválido</string>
    <string name="valid_phone_number">Número correcto</string>
    <string name="write_your_number">Escribe tu número</string>
    <string name="no_bulletins_available">No hay boletines disponibles</string>
    <string name="is_this_your_number">Es este tu número?</string>
    <string name="forecast_item_image_description">Imagen del clima</string>
    <string name="last_synced">actualizado: Nov 5 - 08:13 AM</string>
    <string name="transition_background">background_img</string>

</resources>
